--- a/H-W-24-DOM/html/log.html
+++ b/H-W-24-DOM/html/log.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="../styles/style.css">
 </head>
 
 <body>
@@ -18,20 +18,20 @@
             <form name="log">
                 <label for="email">
                     <div class="icon_1">
-                    <img src="/img/Group 2-icon.svg" alt="">
+                    <img src="../img/Group 2-icon.svg" alt="">
                     </div>
                     <input type="text" placeholder="E-mail or Login" id="email">
                 </label>
                 <label for="password">
                     <div class="icon_2">
-                        <img src="/img/Vector-icon-2.svg" alt="">
+                        <img src="../img/Vector-icon-2.svg" alt="">
                     </div>
 
                     <input type="text" placeholder="Password" id="password">
                 </label>
                 <button class="sing_in">SIGN IN</button>
             </form>
-            <a href="/html/overview.html"><button class="sing_up">SIGN UP</button></a>
+            <a href="../html/overview.html"><button class="sing_up">SIGN UP</button></a>
 
             <a href="#">
                 <p>Forgot your password?</p>
@@ -39,7 +39,7 @@
         </div>
     </div>
 
-    <script src="/script.js"></script>
+    <script src="../script/script.js"></script>
 </body>
 
 </html>
