--- a/H-W-24-DOM/html/market.html
+++ b/H-W-24-DOM/html/market.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
     
@@ -14,7 +14,7 @@
             <div class="search">
                 <label for="search">
                     <input type="text" id="search">
-                    <img src="/img/Group-search.png" alt="">
+                    <img src="../img/Group-search.png" alt="">
                 </label>
             </div>
 
@@ -28,34 +28,34 @@
                 <div class="logo">
                 </div>
                 <div class="text ">
-                    <img src="/img/Vector-text-1.svg" width="16px" height="16px" alt="">
-                    <a href="/html/overview.html"><p>Overview</p></a>
+                    <img src="../img/Vector-text-1.svg" width="16px" height="16px" alt="">
+                    <a href="../html/overview.html"><p>Overview</p></a>
                 </div>
                 <div class="text">
-                    <img src="/img/Vector-text-2.svg" width="16px" height="16px" alt="">
-                    <a href="/html/wallets.html"><p>Wallets</p></a>
+                    <img src="../img/Vector-text-2.svg" width="16px" height="16px" alt="">
+                    <a href="../html/wallets.html"><p>Wallets</p></a>
                 </div>
                 <div class="text">
-                    <img src="/img/Vector-text-3.svg" width="16px" height="16px" alt="">
-                    <a href="/html/transictions.html"><p>Transictions</p></a>
+                    <img src="../img/Vector-text-3.svg" width="16px" height="16px" alt="">
+                    <a href="../html/transictions.html"><p>Transictions</p></a>
                 </div>
                 <div class="text">
-                    <img src="/img/Group 6-text-4.svg" width="16px" height="16px" alt="">
-                    <a href="/html/exchange.html"><p>Exchange</p></a>
+                    <img src="../img/Group 6-text-4.svg" width="16px" height="16px" alt="">
+                    <a href="../html/exchange.html"><p>Exchange</p></a>
                 </div>
                 <div class="text active">
-                    <img src="/img/Vector-text-5.svg" width="16px" height="16px" alt="">
-                    <a href="/html/market.html"><p>Market</p></a>
+                    <img src="../img/Vector-text-5.svg" width="16px" height="16px" alt="">
+                    <a href="../html/market.html"><p>Market</p></a>
                 </div>
             </div>
             <div class="bottom">
                 <div class="text_user">
-                    <img src="/img/Ellipse-text-7.svg" width="16px" height="16px" alt="">
+                    <img src="../img/Ellipse-text-7.svg" width="16px" height="16px" alt="">
                     <p>Mike Jakson</p>
                 </div>
                 <div class="text_user">
-                    <img src="/img/Vector-text-6.svg" width="16px" height="16px" alt="">
-                    <a href="/html/log.html"><p>Log out</p></a>
+                    <img src="../img/Vector-text-6.svg" width="16px" height="16px" alt="">
+                    <a href="../html/log.html"><p>Log out</p></a>
                 </div>
             </div>
 
@@ -64,6 +64,6 @@
 
 
 
-    <script src="/script/script.js"></script>
+    <script src="../script/script.js"></script>
 </body>
 </html>
