--- a/H-W-24-DOM/html/overview.html
+++ b/H-W-24-DOM/html/overview.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="../styles/style.css">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
             <div class="search">
                 <label for="search">
                     <input type="text" id="search">
-                    <img src="/img/Group-search.png" alt="">
+                    <img src="../img/Group-search.png" alt="">
                 </label>
             </div>
 
@@ -30,44 +30,44 @@
                 <div class="logo">
                 </div>
                 <div class="text active">
-                    <img src="/img/Vector-text-1.svg" width="16px" height="16px" alt="">
-                    <a href="/html/overview.html">
+                    <img src="../img/Vector-text-1.svg" width="16px" height="16px" alt="">
+                    <a href="../html/overview.html">
                         <p>Overview</p>
                     </a>
                 </div>
                 <div class="text">
-                    <img src="/img/Vector-text-2.svg" width="16px" height="16px" alt="">
-                    <a href="/html/wallets.html">
+                    <img src="../img/Vector-text-2.svg" width="16px" height="16px" alt="">
+                    <a href="../html/wallets.html">
                         <p>Wallets</p>
                     </a>
                 </div>
                 <div class="text">
-                    <img src="/img/Vector-text-3.svg" width="16px" height="16px" alt="">
-                    <a href="/html/transictions.html">
+                    <img src="../img/Vector-text-3.svg" width="16px" height="16px" alt="">
+                    <a href="../html/transictions.html">
                         <p>Transictions</p>
                     </a>
                 </div>
                 <div class="text">
-                    <img src="/img/Group 6-text-4.svg" width="16px" height="16px" alt="">
-                    <a href="/html/exchange.html">
+                    <img src="../img/Group 6-text-4.svg" width="16px" height="16px" alt="">
+                    <a href="../html/exchange.html">
                         <p>Exchange</p>
                     </a>
                 </div>
                 <div class="text">
-                    <img src="/img/Vector-text-5.svg" width="16px" height="16px" alt="">
-                    <a href="/html/market.html">
+                    <img src="../img/Vector-text-5.svg" width="16px" height="16px" alt="">
+                    <a href="../html/market.html">
                         <p>Market</p>
                     </a>
                 </div>
             </div>
             <div class="bottom">
                 <div class="text_user">
-                    <img src="/img/Ellipse-text-7.svg" width="16px" height="16px" alt="">
+                    <img src="../img/Ellipse-text-7.svg" width="16px" height="16px" alt="">
                     <p>Mike Jakson</p>
                 </div>
                 <div class="text_user">
-                    <img src="/img/Vector-text-6.svg" width="16px" height="16px" alt="">
-                    <a href="/html/log.html">
+                    <img src="../img/Vector-text-6.svg" width="16px" height="16px" alt="">
+                    <a href="../html/log.html">
                         <p>Log out</p>
                     </a>
                 </div>
@@ -125,7 +125,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-    <script src="/script/script.js"></script>
+    <script src="../script/script.js"></script>
 </body>
 
 </html>
